# polkit-mate

./: Makefile.am  NEWS  configure.ac
docs/: polkit-gtk-1-sections.txt  polkit-gtk-1.types
po/: LINGUAS  POTFILES.in  ca.po  ca@valencia.po  cs.po  de.po  es.po  gl.po  pl.po  sl.po  sv.po  zh_CN.po
polkitgtk/: Makefile.am  example-seed.js  polkitlockbutton.c  polkitlockbutton.h
src/: Makefile.am  polkitgnomeauthenticator.c  polkitgnomelistener.c
